--- a/AP1-GmagroJava-App/pom.xml
+++ b/AP1-GmagroJava-App/pom.xml
@@ -48,6 +48,12 @@
             <version>2.15.3</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>13</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -59,7 +65,8 @@
                     <release>11</release>
                 </configuration>
             </plugin>
-            <plugin>
+
+    <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
